k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: devops-api
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
